fix table content overflowing on small screens

--- a/components/Table.module.scss
+++ b/components/Table.module.scss
@@ -16,29 +16,33 @@
     }
   }
 
-  table {
-    width: 100%;
-    text-align: center;
-    border-collapse: collapse;
+  .table_wrapper {
+    max-width: 100%;
+    overflow-x: scroll;
+    table {
+      width: 100%;
+      text-align: center;
+      border-collapse: collapse;
 
-    a {
-      color: $text-500;
-    }
-    tr {
-      border-top: 1px solid $secondary-700;
-    }
-    td,
-    th {
-      padding: 0.6rem;
-    }
-    thead {
-      tr {
-        width: 20%;
+      a {
+        color: $text-500;
       }
-    }
-    tbody {
-      td {
-        text-transform: capitalize;
+      tr {
+        border-top: 1px solid $secondary-700;
+      }
+      td,
+      th {
+        padding: 0.6rem;
+      }
+      thead {
+        tr {
+          width: 20%;
+        }
+      }
+      tbody {
+        td {
+          text-transform: capitalize;
+        }
       }
     }
   }
